fix: gap between lines

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -975,6 +975,10 @@ body {
     .about-section-inner {
       margin: 40px 0 80px 0;
 
+      .about-desc {
+        margin: 40px 0;
+      }
+
       h2 {
         margin-top: 10px;
         font-size: 18px;
